fix(portfolio): remove white space above images in tablet view

--- a/src/stylus/portfolio.styl
+++ b/src/stylus/portfolio.styl
@@ -50,7 +50,6 @@
   margin-bottom: 30px
 
 .project--image
-  padding-top: 56.25%
   min-height: 0
 
 @media screen and (min-width: 768px)
